--- a/src/styles.css
+++ b/src/styles.css
@@ -1,51 +1,56 @@
-/* @font-face {
-  font-family: TelstraAkkurat;
-  src: url("./Assets/Fonts/akkurat-light.woff");
+@font-face {
+ font-family: TelstraAkkurat;
+ src: url("./Assets/Fonts/akkurat-light.woff");
 }
 
 @font-face {
-  font-family: gravur;
-  src: url("./Assets/Fonts/gravur.woff");
+ font-family: gravur;
+ src: url("./Assets/Fonts/gravur.woff");
 }
-
-*/
 
 .App {
-  font-family: Calibri;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+ font-family: TelstraAkkurat;
+ text-align: center;
+ justify-content: center;
+ align-items: center;
 }
 .tab {
-  display: inline-block;
-  margin-left: 90px;
+ display: inline-block;
+ margin-left: 90px;
 }
 
 h1 {
-  color: white;
-  padding: 0;
-  font-family: Calibri;
-  font-size: 2.5em;
+ color: white;
+ padding: 0;
+ font-family: TelstraAkkurat;
+ font-size: 2.5em;
+}
+
+h2 {
+ color: white;
+ padding: 0;
+ font-family: TelstraAkkurat;
+ font-size: 1.5em;
 }
 
 span {
-  font-family: Calibri;
+ font-family: gravur;
 }
 
 p1 {
-  font-family: Calibri;
-  color: white;
-  font-size: 30px;
+ font-family: gravur;
+ color: white;
+ font-size: 30px;
 }
 
 img {
-  display: block;
-  max-width: 230px;
-  max-height: 250px;
-  width: auto;
-  height: auto;
+ display: block;
+ max-width: 230px;
+ max-height: 250px;
+ width: auto;
+ height: auto;
 }
 
 /* a {
-  text-decoration: none;
+ text-decoration: none;
 } */
